[package]
name = "advent_of_code_2019"
version = "0.1.0"
authors = ["jacobguenther <jacobrwguenther@protonmail.com>"]
edition = "2018"
description = "A library for completing the Advent of Code 2020 challenges."
readme = "readme.md"
repository = "https://github.com/jacobguenther/advent_of_code_2019"
license-file = "license.txt"
keywords = ["aoc", "advent of code", "challenge", "devember", "2019"]

[dependencies]
gcd = "2.0.1"
